src/test/ui/error-codes/E0229.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/E0229.rs:23:25
   |
LL | fn baz<I>(x: &<I as Foo<A=Bar>>::A) {}
   |                         ^^^^^ associated type not allowed here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0229"
